Refactoring, improving tests and creating virtual vs native thread execution models.