@@ -1,24 +1,23 @@
 package org.dorkmaster.pipeline.standard;
 
-import org.dorkmaster.pipeline.PipelineContext;
-import org.dorkmaster.pipeline.PipelineException;
-import org.dorkmaster.pipeline.Stage;
+import org.dorkmaster.pipeline.*;
+import org.dorkmaster.pipeline.exception.PipelineExecutionException;
+import org.dorkmaster.pipeline.exception.UnresolvedDependenciesException;
+import org.dorkmaster.pipeline.util.TestStage;
 import org.junit.jupiter.api.Test;
 
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 
 public class StandardPipelineTests {
 
     @Test
     public void testHappyStandard() {
-        Pipeline pipeline = new Pipeline()
-                .addStage(new Stage() {
+        Pipeline pipeline = PipelineFactory.createStandard(List.of(
+                new Stage() {
                     @Override
                     public Collection<String> required() {
                         return List.of("a");
@@ -33,68 +32,28 @@ public class StandardPipelineTests {
                     public PipelineContext execute(PipelineContext ctx) {
                         return ctx.set("b", "b");
                     }
-                });
+                }
+        ));
 
         PipelineContext ctx = pipeline.execute(PipelineContext.newInstance().set("a", "a"));
         assertEquals(ctx.get("b"), "b");
     }
 
-
     @Test
     public void testMissingRequired() {
-        Pipeline pipeline = new Pipeline()
-                .addStage(new Stage() {
-                    @Override
-                    public Collection<String> required() {
-                        return List.of("a");
-                    }
+        Pipeline pipeline = PipelineFactory.createStandard(List.of(
+                new TestStage(List.of("a"),List.of("b"))
+        ));
 
-                    @Override
-                    public Collection<String> provides() {
-                        return List.of("b");
-                    }
-
-                    @Override
-                    public PipelineContext execute(PipelineContext ctx) {
-                        throw new NullPointerException("PipelineContext't get here");
-                    }
-                });
-
-        try {
-            PipelineContext result = pipeline.execute(PipelineContext.newInstance());
-            assertTrue(false, "Should not get here");
-        }
-        catch(PipelineException e) {
-            assertNotNull(e.getCtx());
-        }
+        assertThrows(UnresolvedDependenciesException.class, () -> pipeline.execute(PipelineContext.newInstance()));
     }
 
     @Test
     public void testMissingProvided() {
-        Pipeline pipeline = new Pipeline()
-                .addStage(new Stage() {
-                    @Override
-                    public Collection<String> required() {
-                        return Collections.emptyList();
-                    }
+        Pipeline pipeline = PipelineFactory.createStandard(List.of(
+                new TestStage(Collections.emptyList(), List.of("b"), Collections.emptyList()))
+        );
 
-                    @Override
-                    public Collection<String> provides() {
-                        return List.of("b");
-                    }
-
-                    @Override
-                    public PipelineContext execute(PipelineContext ctx) {
-                        return ctx;
-                    }
-                });
-
-        try {
-            PipelineContext result = pipeline.execute(PipelineContext.newInstance().set("a", "a"));
-            assertTrue(false, "Should not get here");
-        }
-        catch(PipelineException e) {
-            assertNotNull(e.getCtx());
-        }
+        assertThrows(PipelineExecutionException.class, () -> pipeline.execute(PipelineContext.newInstance()));
     }
 }
